--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.cl-userButtonOuterIdentifier {
+  color: aqua;
+  font-size: larger;
+}
